# string-1

./: CMakeLists.txt
console_style/: CMakeLists.txt
console_style/include/: color.hpp  console_style.hpp  execution_result.hpp
console_style/src/: console_style.cpp  execution_result.cpp  function_test.cpp
string_implementation/: CMakeLists.txt
string_implementation/include/: iterator.hpp  string.hpp
string_implementation/src/: string.cpp
string_test/: CMakeLists.txt
string_test/src/: string_test.cpp
